# can-cube-sat

./: .cproject  .gitignore  .gitmodules
3Dmodel_Spacecraft/: a1_without_logo.frm.1  antenna.prt.1  balka_kreplenia.prt.1  bme280_module.prt.1  board-bms.prt.1  board_ark.asm.1  board_payload.asm.1  cam.prt.1  connector_s2b-eh.prt.1  connector_usb-type-c.prt.1  disk.prt.1  electro_brink-bku.prt.1  electro_brink-bsk1.prt.1  electro_brink-bsk2.prt.1  electro_brink-bsk3.prt.1  electro_brink-bsk4.prt.1  electro_brink-bsk5.prt.1  electro_brink-solar.prt.1  electromagnit-coil.prt.1  electromagnit-korpus.prt.1  electromagnit-vtulka.prt.1  electromagnit.asm.1  general_assembly.asm.1  general_assembly.asm.10  general_assembly.asm.2  general_assembly.asm.3  general_assembly.asm.4  general_assembly.asm.5  general_assembly.asm.6  general_assembly.asm.7  general_assembly.asm.8  general_assembly.asm.9  general_assembly_gch.drw.1  general_assembly_sb.drw.1  general_assembly_specification.drw.1  gps_antenna.prt.1  gps_ublox_neo-7m-0-000.prt.1  heater.prt.1  ic_balance_battery_hy2213-bb3a.prt.1  ic_buck-boost_dc-dc_ltc3119efe.prt.1  (+92 more)
ARK-code/: .cproject  .project
Debug/: Test2.elf  Test2.hex  Test2.map  makefile
SINS/: .cproject
doc/: --2-.odt  Interection-interfaces-protocols.odt  Prilozhenie-2.-PROTOCOLS.odt  TR-WHOLE-THING.odt  pps-distribution.drawio  ТЗ-ЗОНД.odt  ТЗ-НКУ.odt  ТЗ-ОКР.odt
include/: bme280.h  ina_helper.h  sensors.h  stm32f1xx_hal_conf.h
schematics/: .gitignore  eagle.epf
src/ground/rpi/native/src/lib-strela-ms-rpi/: CMakeLists.txt  strela-ms-rpi.c
(+1105 files in other folders)
